# Distributed_file_system

./: CMakeLists.txt  DFS_presentation.pptx  LICENSE  README.md
DFS/: CMakeLists.txt  main.cpp
DFS/assets/: assets.qrc
DFS/include/: adminwidget.cpp  adminwidget.hpp  clientmacros.hpp  connectionwidget.hpp  logger.hpp  loginwidget.hpp  mainwidget.hpp  networkmanager.hpp  registrationwidget.hpp  window.hpp
DFS/src/: adminwidget.cpp  connectionwidget.cpp  logger.cpp  loginwidget.cpp  mainwidget.cpp  networkmanager.cpp  registrationwidget.cpp  window.cpp
FollowerServer/: CMakeLists.txt  main.cpp
FollowerServer/assets/: app.rc  assets.qrc
FollowerServer/include/: followerserver.hpp  followerwindow.hpp  mainserver.hpp  mainwindow.hpp  servermacros.hpp
FollowerServer/src/: followerserver.cpp  followerwindow.cpp  logger.cpp  mainserver.cpp  mainwindow.cpp
FollowerServer_2/: CMakeLists.txt
FollowerServer_2/include/: mainwindow.hpp
FollowerServer_2/src/: mainwindow.cpp
MainServer/: CMakeLists.txt  main.cpp
MainServer/include/: logger.hpp  mainserver.hpp  mainwindow.hpp  servermacros.hpp
MainServer/src/: mainserver.cpp  mainwindow.cpp
Prototypes/ClientServer/: was_here.txt
Prototypes/ClientServer/Client/: 1.txt  CMakeLists.txt  build.bat  client.cpp  client.hpp  main.cpp
Prototypes/ClientServer/Client/DFS/: CMakeLists.txt
Prototypes/ClientServer/Client/DFS/include/: connectionwidget.hpp  loginwidget.hpp  networkmanager.hpp  window.hpp
Prototypes/ClientServer/Client/DFS/src/: connectionwidget.cpp  loginwidget.cpp  mainwidget.cpp  networkmanager.cpp  registrationwidget.cpp  window.cpp
Prototypes/ClientServer/Server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
Prototypes/ClientServer/Servers/MainServer/: build.bat  main.cpp
Prototypes/DFS/: main.cpp
Prototypes/DFS/assets/: assets.qrc
Prototypes/DFS/include/: connectionwidget.hpp  loginwidget.hpp  mainwidget.hpp  networkmanager.hpp
Prototypes/DFS/src/: connectionwidget.cpp  mainwidget.cpp  networkmanager.cpp  window.cpp
Prototypes/DataBase/: .gitignore  CMakeLists.txt  admininterface.cpp  admininterface.hpp  database.cpp  database.hpp  databasemanager.cpp  databasemanager.hpp  filemanager.cpp  filemanager.hpp  filesdatabase.hpp  loginuser.cpp  loginuser.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  registeruser.cpp  registeruser.hpp  usersdatabase.hpp
Prototypes/DataBase/DataBaseFiles/: database.db  files.db  users.db
Prototypes/MainServer/include/: mainserver.hpp
Prototypes/MainServer/src/: mainserver.cpp
ReplicaServer/: CMakeLists.txt
ReplicaServer/assets/: assets.qrc
ReplicaServer/include/: mainwindow.hpp  replicamacros.hpp  replicaserver.hpp
ReplicaServer/src/: logger.cpp  mainwindow.cpp  replicaserver.cpp
assets/: DFS.rc  MainServer.rc  ReplicaServer.rc  assets.qrc
utils/include/: macros.hpp
utils/src/: logger.cpp
